# Active-Trace

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json  video_entrega.txt
backend/: .coverage  .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  run.py
backend/activia_trace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 006_create_version_padron_entrada_padron.py  007_create_calificacion_umbral_materia.py  008_create_comunicacion.py  009_create_slot_instancia_guardia.py  010_create_evaluaciones.py  011_create_aviso_acknowledgment.py  012_create_tarea_comentario_tarea.py  013_expand_audit_log.py  014_create_programa_materia_fecha_academica.py  015_create_mensaje.py  016_create_liquidaciones.py  1bf081a8b62d_005_usuarios_asignaciones.py  (+4 more)
backend/app/: main.py
backend/app/core/: config.py  (+13 more)
backend/scripts/: init_db.py  seed.py
backend/tests/: conftest.py  test_app_startup.py  test_auth.py  test_calificacion_model.py  test_calificacion_repo.py  test_calificaciones_parser.py  test_config.py  test_database.py  test_encryption.py  test_estructura_academica.py  test_health.py  test_liquidaciones.py  test_mensaje.py  test_mixins.py  test_moodle_ws.py  test_padron_parser.py  test_programas_fechas.py  test_rbac.py  test_repos_user_asignacion.py  test_repository.py  test_router_calificaciones.py  test_router_padron.py  test_router_umbral.py  test_router_usuarios.py  test_schemas_user_asignacion.py  test_user_model.py  test_version_padron_model.py  test_version_padron_repo.py
(+461 files in other folders)
